Changed the commenting from mark up to html

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
-{/*Create index.html*/}
+<!--Create index.html-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {/*Change title*/}
+    <!--Change title-->
     <title>portfolio-website-1</title>
 </head>
 <body>
-    {/*main render*/}
+    <!--main render-->
     <div id="root"></div>
     
 </body>
