--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Change title-->
-        <title>portfolio-website-1</title>
+        <title>georgegithuma.com</title>
     </head>
 
     <body>
